<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:gravity="center"
            style="@style/HeaderText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/product_editing"/>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:padding="16dp"
            style="@style/TitleText"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center_horizontal"
            android:text="@string/delete"
    />
    <android.support.v7.widget.AppCompatButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:background="@android:color/transparent"
            style="@style/TitleText"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintRight_toLeftOf="@+id/negativeButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/edit"
    />
</android.support.constraint.ConstraintLayout>