<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/layout_appbar"/>

    <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_margin="8dp">
        <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:clickable="true"
                    android:padding="32dp">

                <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/titleName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"/>
                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/editName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>

                <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/titlePrice"
                        android:layout_marginTop="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"/>
                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/editPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="9"
                        android:inputType="number"/>

                <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/titleCount"
                        android:layout_marginTop="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/count"/>
                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/editCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="9"
                        android:inputType="number"/>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.card.MaterialCardView>
</android.support.design.widget.CoordinatorLayout>